# axon

./: .dockerignore  .gitignore  .helix.yml  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  deny.toml  docker-compose.yml  package-lock.json
.ddx/: beads.jsonl  config.yaml  dirty-root-guard.json  drain.sh  execute-progress.md  lifecycle-schema.json  run-state.json
.helix/: context.md
.helix-logs/: blockers-20260404-185014.md
commands/: execute.md  grind.md  handoff.md  review.md  triage.md
crates/axon-api/: Cargo.toml
crates/axon-api/benches/: benchmarks.rs
crates/axon-api/proptest-regressions/: proptest_api.txt
crates/axon-api/src/: bead.rs  builder.rs  handler.rs  intent.rs  lib.rs  policy.rs  proptest_api.rs  request.rs  response.rs  test_fixtures.rs  transaction.rs
crates/axon-api/tests/: backend_parity.rs  business_scenarios.rs  governed_system_backend_parity.rs  governed_system_compile_fail.rs  link_key.rs  raw_access_compile_fail.rs  serializable_autocapture.rs
crates/axon-audit/: Cargo.toml
crates/axon-audit/src/: cdc.rs  cursor.rs  cursor_token.rs  entry.rs  lib.rs  log.rs  prov.rs
crates/axon-audit/tests/: attribution_test.rs
crates/axon-cli/: Cargo.toml
crates/axon-cli/src/: client.rs  doctor.rs  init.rs  main.rs  service.rs
crates/axon-cli/tests/: markdown.rs
crates/axon-config/: Cargo.toml
crates/axon-config/src/: config.rs  lib.rs  paths.rs
crates/axon-control-plane/: Cargo.toml
crates/axon-control-plane/src/: error.rs  http.rs  lib.rs  model.rs  service.rs  store.rs
crates/axon-control-plane/tests/: byoc_flow.rs  byoc_safety_proof.rs
crates/axon-core/: Cargo.toml
crates/axon-core/src/: auth.rs  clock.rs  error.rs  guardrails.rs  id.rs  intent.rs  lib.rs  topology.rs  types.rs
crates/axon-core/tests/: auth_error_manifest_test.rs
crates/axon-cypher/: Cargo.toml
crates/axon-cypher-ast/: Cargo.toml
crates/axon-cypher-ast/src/: ast.rs  lib.rs  schema.rs  validator.rs
crates/axon-cypher/benches/: ddx_benchmark.rs
crates/axon-cypher/src/: ast.rs  error.rs  executor.rs  lexer.rs  lib.rs  memory_store.rs  parser.rs  planner.rs  schema.rs  storage_adapter_store.rs  validator.rs
crates/axon-cypher/tests/: ddx_integration.rs  sqlite_parity.rs
crates/axon-esf/: Cargo.toml
crates/axon-esf/examples/: compiled_schema_perf.rs
crates/axon-esf/src/: index_key.rs  lib.rs  types.rs  validation.rs
crates/axon-mcp/: Cargo.toml
crates/axon-mcp/src/: error_mapping.rs  handlers.rs  lib.rs  prompts.rs  protocol.rs  resources.rs  tools.rs
crates/axon-registry/: Cargo.toml
crates/axon-registry/src/: lib.rs
crates/axon-render/: Cargo.toml
crates/axon-render/src/: fields.rs  lib.rs
crates/axon-schema/: Cargo.toml
crates/axon-schema/fixtures/: beads.esf.yaml
crates/axon-schema/src/: access_control.rs  evolution.rs  gates.rs  lib.rs  named_queries.rs  policy.rs  proptest_schema.rs  rules.rs  schema.rs  validation.rs
crates/axon-server/: Cargo.toml  build.rs
crates/axon-server/proto/: axon.proto
crates/axon-server/src/: actor_scope.rs  auth.rs  auth_pipeline.rs  bootstrap.rs  collection_listing.rs  control_plane.rs  control_plane_authz.rs  control_plane_graphql.rs  control_plane_routes.rs  cors_config.rs  database_router.rs  embedded_ui.rs  federation.rs  gateway.rs  idempotency.rs  lib.rs  main.rs  mcp_http.rs  mcp_stdio.rs  no_auth.rs  path_router.rs  rate_limit.rs  schema_registry.rs  serve.rs  service.rs  tenant_router.rs  tls_bootstrap.rs  user_roles.rs
crates/axon-server/tests/: api_contract.rs  auth_pipeline_integration_test.rs  auth_pipeline_test.rs  auth_rejection_matrix.rs  auth_startup.rs  bootstrap_test.rs  control_credentials_test.rs  control_databases_test.rs  control_graphql_test.rs  control_tenants_test.rs  control_users_provision_test.rs  cutover_jwt_test.rs  database_router_test.rs  feat_029_contract_parent.rs  federation_test.rs  governed_handler_routes.rs  graphql_consumer_parity.rs  graphql_contract.rs  graphql_intents_contract.rs  graphql_mutations.rs  graphql_policy_contract.rs  graphql_subscriptions.rs  l6_route_contract_test.rs  lifecycle_test.rs  mcp_contract.rs  mcp_intents_contract.rs  no_auth_test.rs  path_router_test.rs  reserved_namespace_surface_parity.rs  scn_011_cross_tenant_isolation_test.rs  snapshot_test.rs
crates/axon-sim/: Cargo.toml
crates/axon-sim/src/: audit_completeness.rs  audit_immutability.rs  buggify.rs  concurrent_writer.rs  cycle.rs  invariants.rs  lib.rs  link_integrity.rs  rng.rs  schema_enforcement.rs  transaction_atomicity.rs  write_skew.rs
crates/axon-sim/tests/: seed_sweep.rs
crates/axon-storage/: Cargo.toml  internal-manifest.json
crates/axon-storage/src/: adapter.rs  auth_schema.rs  conformance.rs  cursor_store.rs  index_builder.rs  lib.rs  memory.rs  postgres.rs  proptest_storage.rs  sqlite.rs  storage_adapter_store.rs
crates/axon-storage/tests/: auth_schema.rs  internal_manifest.rs  postgres_routine_privileges.rs  postgres_tenant_isolation.rs  tenant_users_test.rs
examples/: README.md
k8s/: axon.yaml
schema/: auth-errors.manifest.json
scripts/: check_covers_traceability.py  check_covers_traceability_test.py  check_tracker_measure_timestamps.py  cutover-smoke.sh  generate_website_coverage.py  helix  (+5 more)
xtask/: Cargo.toml
xtask/src/: audit_dml_boundary.rs  lib.rs  main.rs
xtask/tests/fixtures/audit_dml_boundary/invalid/: manifest.json
xtask/tests/fixtures/audit_dml_boundary/invalid/data/: seed.sql
xtask/tests/fixtures/audit_dml_boundary/invalid/src/: dynamic.rs  unparseable.rs
xtask/tests/fixtures/audit_dml_boundary/repository_negative/: manifest.json
xtask/tests/fixtures/audit_dml_boundary/repository_negative/data/: direct_entity_write.sql
xtask/tests/fixtures/audit_dml_boundary/unclassified_routine/: manifest.json  schema.sql
xtask/tests/fixtures/audit_dml_boundary/valid/: manifest.json
xtask/tests/fixtures/audit_dml_boundary/valid/data/: seed.sql
xtask/tests/fixtures/audit_dml_boundary/valid/migrations/: 001_schema.sql
xtask/tests/fixtures/audit_dml_boundary/valid/src/: entrypoints.rs
(+1828 files in other folders)
