[workspace]
members = [
    "crates/axon-core",
    "crates/axon-schema",
    "crates/axon-audit",
    "crates/axon-storage",
    "crates/axon-api",
    "crates/axon-cli",
    "crates/axon-sim",
    "crates/axon-server",
    "crates/axon-graphql",
    "crates/axon-mcp",
    "crates/axon-control-plane",
]
resolver = "2"

[workspace.package]
version = "0.2.6"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DocumentDrivenDX/axon"
rust-version = "1.75"

[workspace.lints.clippy]
# Treat all warnings as errors.
all = { level = "deny", priority = -1 }
# Pedantic lints — selectively enabled, noisy ones suppressed.
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
default_trait_access = "allow"
unreadable_literal = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
needless_pass_by_value = "allow"
derive_partial_eq_without_eq = "allow"
match_same_arms = "allow"
map_unwrap_or = "allow"
too_many_lines = "allow"
manual_let_else = "allow"
return_self_not_must_use = "allow"
items_after_statements = "allow"
struct_excessive_bools = "allow"
single_match_else = "allow"
assigning_clones = "allow"
unnecessary_wraps = "allow"
needless_pass_by_ref_mut = "allow"
redundant_closure_for_method_calls = "allow"
# Nursery lints (experimental, may have false positives).
nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
missing_const_for_fn = "allow"
use_self = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
redundant_clone = "allow"

[workspace.lints.rust]
# Warn on unsafe code; intentional uses (e.g. postgres adapter) use #[allow].
unsafe_code = "warn"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ramhorns = { version = "1.0.1", default-features = false }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "json", "uuid"] }

# Schema validation
jsonschema = "0.28"
serde_yaml = "0.9"
regex = "1"

# gRPC / HTTP
tonic = { version = "0.13", features = ["transport"] }
tonic-build = "0.13"
prost = "0.13"
axum = "0.8"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
tokio-rustls = "0.26"
rustls-pki-types = { version = "1", features = ["std"] }
rcgen = { version = "0.13", default-features = false, features = ["pem", "aws_lc_rs"] }

# GraphQL
async-graphql = "7"
async-graphql-axum = "7"

# UUID
uuid = { version = "1", features = ["v4", "v5", "v7", "serde"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Time
humantime = "2"
time = { version = "0.3", default-features = false, features = ["std"] }
sha2 = "0.10"

# Config
dirs = "6"
toml = "0.8"

# Embedded assets
rust-embed = "8"
mime_guess = "2"

# Metrics
metrics = "0.24"

# Testing
pretty_assertions = "1"
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
testcontainers-modules = { version = "0.15.0", default-features = false }
