[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
proc-macro2 = { version = "1", features = ["span-locations"] }
serde.workspace = true
serde_json.workspace = true
sqlparser = "0.62"
syn = { version = "2", features = ["full", "visit"] }
thiserror.workspace = true
walkdir = "2"

[dev-dependencies]
pretty_assertions.workspace = true
