[package]
name = "axon-api"
description = "HTTP/gRPC API surface for Axon server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axon-core = { path = "../axon-core" }
axon-schema = { path = "../axon-schema" }
axon-audit = { path = "../axon-audit" }
axon-storage = { path = "../axon-storage" }
axon-render = { path = "../axon-render" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "benchmarks"
harness = false
