[package]
name = "axon-audit"
description = "Immutable audit log: records every mutation with provenance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axon-core = { path = "../axon-core" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
