[package]
name = "axon-audit"
description = "Immutable audit log: records every mutation with provenance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
# Enable real rdkafka producer integration.
# Run Kafka-specific tests with: cargo test -p axon-audit --features kafka
kafka = ["dep:rdkafka"]

[lints]
workspace = true

[dependencies]
axon-core = { path = "../axon-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rdkafka = { version = "0.36", optional = true, features = ["cmake-build", "tokio"] }

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true }
