[package]
name = "axon-audit"
description = "Immutable audit log: records every mutation with provenance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
# Enable real rdkafka producer integration.
# Run Kafka-specific tests with: cargo test -p axon-audit --features kafka
kafka = ["dep:rdkafka", "dep:tokio"]

[lints]
workspace = true

[dependencies]
axon-core = { path = "../axon-core" }
serde.workspace = true
serde_json.workspace = true
time = { workspace = true, features = ["formatting"] }
rdkafka = { version = "0.36", optional = true, features = ["cmake-build", "tokio"] }
tokio = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true }
