[package]
name = "axon-cli"
description = "Command-line interface for Axon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "axon"
path = "src/main.rs"

[dependencies]
axon-core = { path = "../axon-core" }
axon-api = { path = "../axon-api" }
axon-audit = { path = "../axon-audit" }
axon-storage = { path = "../axon-storage" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
