[package]
name = "axon-cli"
description = "Command-line interface for Axon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "axon"
path = "src/main.rs"

[dependencies]
axon-core = { path = "../axon-core" }
axon-api = { path = "../axon-api" }
axon-audit = { path = "../axon-audit" }
axon-schema = { path = "../axon-schema" }
axon-storage = { path = "../axon-storage" }
axon-config = { path = "../axon-config" }
axon-server = { path = "../axon-server", optional = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
tokio = { workspace = true, optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[features]
default = ["serve"]
serve = ["dep:axon-server", "dep:tokio", "dep:reqwest"]

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
