[package]
name = "axon-config"
description = "XDG-compliant path resolution and TOML config loading for Axon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
dirs.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
