[package]
name = "axon-esf"
description = "Thin ESF types and validation for external Axon schema consumers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
jsonschema.workspace = true
