[package]
name = "axon-mcp"
description = "MCP (Model Context Protocol) server for Axon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axon-core.path = "../axon-core"
axon-schema.path = "../axon-schema"
axon-api.path = "../axon-api"
axon-storage.path = "../axon-storage"
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
