[package]
name = "axon-mcp"
description = "MCP (Model Context Protocol) server for Axon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axon-core.path = "../axon-core"
axon-schema.path = "../axon-schema"
axon-api.path = "../axon-api"
axon-graphql.path = "../axon-graphql"
axon-storage.path = "../axon-storage"
async-graphql.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
axon-api = { path = "../axon-api", features = ["test-fixtures"] }
pretty_assertions.workspace = true
