[package]
name = "axon-registry"
description = "Confluent-compatible schema registry HTTP facade for Axon (FEAT-021; wire format per CONTRACT-006)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axon-core = { path = "../axon-core" }
axon-schema = { path = "../axon-schema" }
axon-storage = { path = "../axon-storage" }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
axon-storage = { path = "../axon-storage" }
axum-test = "20"
pretty_assertions.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
