[package]
name = "axon-schema"
description = "Schema definitions, validation, and migration for Axon collections"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axon-core = { path = "../axon-core" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
jsonschema.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
proptest.workspace = true
