[package]
name = "axon-schema"
description = "Schema definitions, validation, and migration for Axon collections"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axon-core = { path = "../axon-core" }
axon-cypher = { path = "../axon-cypher" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
jsonschema.workspace = true
regex.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
proptest.workspace = true
