[package]
name = "axon-server"
description = "gRPC API server and HTTP gateway for Axon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axon-core = { path = "../axon-core" }
axon-api = { path = "../axon-api" }
axon-audit = { path = "../axon-audit" }
axon-schema = { path = "../axon-schema" }
axon-storage = { path = "../axon-storage" }
axon-mcp = { path = "../axon-mcp" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
prost.workspace = true
axum.workspace = true
clap.workspace = true
tailscale-localapi = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tokio-stream = "0.1"

[package.metadata.cargo-machete]
ignored = ["prost"]

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.13", features = ["transport"] }
tokio-stream = "0.1"
axum-test = "20"
axum = { version = "0.8", features = [] }
tower = "0.5"
serde_json.workspace = true
