[package]
name = "axon-server"
description = "gRPC API server and HTTP gateway for Axon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axon-core = { path = "../axon-core" }
axon-api = { path = "../axon-api" }
axon-audit = { path = "../axon-audit" }
axon-schema = { path = "../axon-schema" }
axon-storage = { path = "../axon-storage" }
axon-mcp = { path = "../axon-mcp" }
axon-graphql = { path = "../axon-graphql" }
async-graphql.workspace = true
async-graphql-axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
prost.workspace = true
axum.workspace = true
clap.workspace = true
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tokio-rustls.workspace = true
rustls-pki-types.workspace = true
rcgen.workspace = true
time.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
humantime.workspace = true
jsonwebtoken = "9"
metrics.workspace = true
sqlx.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true

[package.metadata.cargo-machete]
ignored = ["prost"]

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.13", features = ["transport"] }
tokio-stream.workspace = true
axum-test = { version = "20", features = ["ws"] }
axum = { version = "0.8", features = [] }
tower = "0.5"
reqwest.workspace = true
serde_json.workspace = true
proptest.workspace = true
