[package]
name = "axon-storage"
description = "Storage adapter trait and in-memory implementation for Axon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axon-core = { path = "../axon-core" }
axon-audit = { path = "../axon-audit" }
axon-schema = { path = "../axon-schema" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rusqlite.workspace = true
postgres.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
proptest.workspace = true
testcontainers-modules = { workspace = true, features = ["blocking", "postgres"] }
