[package]
name = "axon-storage"
description = "Storage adapter trait and in-memory implementation for Axon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axon-core = { path = "../axon-core" }
axon-audit = { path = "../axon-audit" }
axon-schema = { path = "../axon-schema" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sqlx.workspace = true
tokio-postgres.workspace = true
sqlx.workspace = true
tokio = { workspace = true }
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
testcontainers-modules = { workspace = true, features = ["blocking", "postgres"] }
